Missing Expiration Date Files modified - [_viewForm]

--- a/src/main/webapp/pages/_viewForm/_viewForm.html
+++ b/src/main/webapp/pages/_viewForm/_viewForm.html
@@ -48,6 +48,13 @@
                                     </wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="2" name="gridcolumn157"></wm-gridcolumn>
                                 </wm-gridrow>
+                                <wm-gridrow name="gridrow117">
+                                    <wm-gridcolumn columnwidth="2" name="gridcolumn216"></wm-gridcolumn>
+                                    <wm-gridcolumn columnwidth="8" name="gridcolumn217" horizontalalign="center">
+                                        <wm-label padding="unset 0.5em" caption="bind:&quot;Expires: [&quot;+(Variables.CurrentForm.firstRecord.expiresDate | toDate: 'MM-dd-yyyy') +&quot;]&quot;" margin="0px unset" name="label145"></wm-label>
+                                    </wm-gridcolumn>
+                                    <wm-gridcolumn columnwidth="2" name="gridcolumn218"></wm-gridcolumn>
+                                </wm-gridrow>
                                 <wm-gridrow name="gridrow83_1">
                                     <wm-gridcolumn columnwidth="2" name="gridcolumn156_3"></wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="8" name="gridcolumn156_2" horizontalalign="center">
