UserCreation- user email validation Files modified - [UserCreation,cx2,securityService,project-security.xml]

--- a/src/main/webapp/pages/UserCreation/UserCreation.html
+++ b/src/main/webapp/pages/UserCreation/UserCreation.html
@@ -23,7 +23,8 @@
                             </wm-gridrow>
                             <wm-gridrow name="gridrow7">
                                 <wm-gridcolumn columnwidth="6" name="gridcolumn13">
-                                    <wm-form-field name="email" displayname="Email Address" show="true" primary-key="false" generator="assigned" key="email" type="string" required="required" widget="text" maxchars="255" inputtype="email" placeholder="Enter value"></wm-form-field>
+                                    <wm-form-field name="email" displayname="Email Address" show="true" primary-key="false" generator="assigned" key="email" type="string" required="required" widget="text" maxchars="255" inputtype="email" placeholder="Enter value"
+                                    on-blur="emailBlur($event, $scope)"></wm-form-field>
                                 </wm-gridcolumn>
                                 <wm-gridcolumn columnwidth="6" name="gridcolumn14">
                                     <wm-form-field name="phoneNumber" displayname="Phone Number" show="true" primary-key="false" generator="assigned" key="phoneNumber" type="string" required="required" widget="text" maxchars="20" inputtype="text" placeholder="Enter value"></wm-form-field>
@@ -179,7 +180,7 @@
                                                                 </wm-gridcolumn>
                                                                 <wm-gridcolumn name="gridcolumn2" columnwidth="4">
                                                                     <wm-form-field name="companyEmail" displayname="Company Email" show="true" primary-key="false" generator="assigned" key="companyEmail" type="string" readonly="false" required="bind:Widgets.checkboxIsCompanyListed.datavalue"
-                                                                    widget="text" maxchars="255" inputtype="email" placeholder="Enter value" validationmessage="Company Email is required" on-blur="companyEmailBlur($event, $scope)" on-change="companyEmailChange($event, $scope, newVal, oldVal)"></wm-form-field>
+                                                                    widget="text" maxchars="255" inputtype="email" placeholder="Enter value" validationmessage="Company Email is required" on-blur="companyEmailBlur($event, $scope)"></wm-form-field>
                                                                 </wm-gridcolumn>
                                                                 <wm-gridcolumn name="gridcolumn3" columnwidth="4">
                                                                     <wm-form-field name="companyPhone" displayname="Company Phone" show="true" primary-key="false" generator="assigned" key="companyPhone" type="string" readonly="false" required="bind:Widgets.checkboxIsCompanyListed.datavalue"
