System Email Text Files modified - [CXGlobalSettings,CXPasswordResetService,ResetPasswordMailService,cx2]

--- a/src/main/webapp/pages/CXGlobalSettings/CXGlobalSettings.html
+++ b/src/main/webapp/pages/CXGlobalSettings/CXGlobalSettings.html
@@ -80,6 +80,21 @@
                                         <wm-form-field name="cxeula" displayname="CX EULA" show="true" primary-key="false" generator="assigned" key="cxeula" type="text" readonly="false" required="false" widget="richtext" maxchars="2147483647" placeholder="Enter value"></wm-form-field>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
+                                <wm-gridrow name="gridrow1">
+                                    <wm-gridcolumn name="gridcolumn1" columnwidth="12" padding=".2em unset">
+                                        <wm-form-field name="cxwelcomeMessage" displayname="Cxwelcome Message" show="true" primary-key="false" generator="assigned" key="cxwelcomeMessage" type="text" readonly="false" widget="richtext"></wm-form-field>
+                                    </wm-gridcolumn>
+                                </wm-gridrow>
+                                <wm-gridrow name="gridrow2">
+                                    <wm-gridcolumn name="gridcolumn2" columnwidth="12" padding=".2em unset">
+                                        <wm-form-field name="cxresetPassword1" displayname="Reset Password Text Part-1" show="true" primary-key="false" generator="assigned" key="cxresetPassword1" type="text" readonly="false" widget="richtext"></wm-form-field>
+                                    </wm-gridcolumn>
+                                </wm-gridrow>
+                                <wm-gridrow name="gridrow3">
+                                    <wm-gridcolumn name="gridcolumn3" columnwidth="12" padding=".2em unset">
+                                        <wm-form-field name="cxresetPassword2" displayname="Reset Password Text Part-2" show="true" primary-key="false" generator="assigned" key="cxresetPassword2" type="text" readonly="false" widget="richtext"></wm-form-field>
+                                    </wm-gridcolumn>
+                                </wm-gridrow>
                             </wm-layoutgrid>
                             <wm-form-field name="id" displayname="Id" show="false" primary-key="true" generator="identity" key="id" type="integer" readonly="true" required="true" step="0" widget="number" inputtype="number" placeholder=""></wm-form-field>
                             <wm-form-action key="save" display-name="Save" show="true" class="form-save btn-primary" iconclass="wi wi-save" title="Save" disabled="false" type="submit" update-mode="true"></wm-form-action>
