CompanyDetails read-only (except for Company Admin) Files modified - [CompanyDetails,CompanyProfile,selectCompany,cx2]

--- a/src/main/webapp/pages/CompanyProfile/CompanyProfile.html
+++ b/src/main/webapp/pages/CompanyProfile/CompanyProfile.html
@@ -23,7 +23,7 @@
                 <wm-gridrow name="gridrow10">
                     <wm-gridcolumn columnwidth="12" name="gridcolumn25">
                         <wm-container name="containerCompany" content="CompanyDetails">
-                            <wm-param name="companyID" value="bind:Widgets.panel2.Widgets.selectCompany.datavalue.ID" type="integer"></wm-param>
+                            <wm-param name="companyID" value="bind:Widgets.panel2.Widgets.selectCompany.datavalue.id" type="integer"></wm-param>
                         </wm-container>
                     </wm-gridcolumn>
                 </wm-gridrow>
