added muni and formtype name to top of newform wizard Files modified - [NewForm]

--- a/src/main/webapp/pages/NewForm/NewForm.html
+++ b/src/main/webapp/pages/NewForm/NewForm.html
@@ -5,6 +5,12 @@
         <wm-left-panel columnwidth="2" content="leftnav" name="left_panel1"></wm-left-panel>
         <wm-page-content columnwidth="10" name="page_content1">
             <wm-layoutgrid name="layoutgrid3">
+                <wm-gridrow name="gridrow74">
+                    <wm-gridcolumn columnwidth="12" name="gridcolumn128">
+                        <wm-label padding="unset 1.5em unset 0.5em" name="label51" caption="bind:Variables.lvFormType.dataSet.data[$i].municipalities.municipalityName"></wm-label>
+                        <wm-label padding="unset 0.5em" name="label50" caption="bind:Variables.lvFormType.dataSet.data[$i].formType" fontweight="bold"></wm-label>
+                    </wm-gridcolumn>
+                </wm-gridrow>
                 <wm-gridrow name="gridrow7">
                     <wm-gridcolumn columnwidth="12" name="gridcolumn12">
                         <wm-spinner show="false" name="spinnerFormSubmit" caption="" servicevariabletotrack="svSubmitForm"></wm-spinner>
